# lex

./: .gitignore  LICENSE  README.md
api/: lex-asyncapi.yaml  lex-cloudevents-mapping.md  lex-openapi.yaml
docs/: CNAME  blog.html  conformance.html  edi-reference.html  examples.html  faq.html  getting-started.html  index.html  industries.html  spec.html
examples/: edifact-lead.txt  json-edi-lead.json  multi-industry-assets.json  x12-lead.txt  xml-edi-lead.xml
pages/: _headers  conformance.html  edi-reference.html  examples.html  getting-started.html  index.html  llms.txt  robots.txt  sitemap.xml  spec.html  whitepaper.html
registry/: LEX_EXTENSION_REGISTRY.json  LEX_ORGANIZATION_REGISTRY.json  LEX_PRODUCT_TYPE_REGISTRY.json
samples/python-fastapi/: README.md  pyproject.toml
samples/python-fastapi/app/: main.py
schemas/: LEX_ASSET_SCHEMA.json  LEX_LEAD_CLOSURE_SCHEMA.json  LEX_LEAD_SCHEMA.json
specs/: LEX_AI_INSIGHTS.md  LEX_API_SPECIFICATIONS.md  LEX_AVIATION_EXTENSIONS.md  LEX_CAPABILITY_ADVERTISEMENT.md  LEX_CAPTIVE_FINANCE.md  LEX_CONFORMANCE.md  LEX_CONSENT_MODEL.md  LEX_DATA_GOVERNANCE.md  LEX_DEAL_LINEAGE.md  LEX_DEDUPLICATION.md  LEX_EV_EXTENSIONS.md  LEX_EXTENSION_STANDARD.md  LEX_FIELD_DICTIONARY.md  LEX_FINANCIAL_SUMMARY.md  LEX_HEAVY_EQUIPMENT_EXTENSIONS.md  LEX_INTEGRATED_EXAMPLES.md  LEX_LEAD_CLOSURE.md  LEX_LEAD_INTELLIGENCE.md  LEX_MARITIME_EXTENSIONS.md  LEX_MESSAGE_TYPES.md  LEX_MULTI_INDUSTRY.md  LEX_ORGANIZATION_EXTENSIONS.md  LEX_PRODUCT_MODEL.md  LEX_REAL_ESTATE_EXTENSIONS.md  LEX_SPECIFICATION.md  LEX_TECHNOLOGY_EXTENSIONS.md  (+2 more)
(+110 files in other folders)
