[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "lex-sample-fastapi"
version = "1.0.0"
description = "LEX sample — Python / FastAPI — multi-industry lead exchange demo"
requires-python = ">=3.9"
dependencies = [
    "lexstandard @ file:../../libraries/python",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",
]
